fix: 2回以上の離席に対応
